syntax = "proto3";

package ai.metathings.service.deviced;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

message RevokeDeviceFromUserRequest {
	google.protobuf.StringValue device_id = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue user_id = 2 [(validator.field) = {msg_exists: true}];
}
